# alopex

./: .actrc  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASING.md
crates/alopex-cli/: Cargo.toml  README.md
crates/alopex-cli/benches/: streaming_bench.rs
crates/alopex-cli/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  streaming_outputs_test.rs
crates/alopex-cli/src/batch/: detector.rs  exit_code.rs  mod.rs
crates/alopex-cli/src/client/: auth.rs  http.rs
crates/alopex-cli/src/commands/: columnar.rs  connect.rs  hnsw.rs  kv.rs  mod.rs  server.rs  sql.rs  vector.rs  version.rs
crates/alopex-cli/src/output/: csv.rs  formatter.rs  json.rs  jsonl.rs  mod.rs  server.rs  table.rs  tsv.rs
crates/alopex-cli/src/profile/: commands.rs  config.rs  mod.rs
crates/alopex-cli/src/progress/: indicator.rs  mod.rs
crates/alopex-cli/src/streaming/: cancel.rs  mod.rs  timeout.rs  writer.rs
crates/alopex-cli/src/tui/: detail.rs  keymap.rs  mod.rs  search.rs  table.rs
crates/alopex-cli/src/uri/: mod.rs
crates/alopex-cli/src/version/: compatibility.rs  mod.rs
crates/alopex-cli/tests/: integration_cli.sh  profile_test.rs  server_test.rs  sql_stdin.rs  streaming_test.rs  tui_test.rs
crates/alopex-cli/tests/e2e/: server_commands_test.rs  server_connection_test.rs  streaming_test.rs  tui_test.rs
crates/alopex-cluster/: Cargo.toml
crates/alopex-core/: Cargo.toml
crates/alopex-core/benches/: columnar_bench.rs  hnsw_bench.rs  lsm_kv_bench.rs  scan_strategy_bench.rs  vector_flat.rs  vector_search.rs
crates/alopex-core/examples/: generate_compat_v0_1.rs
crates/alopex-core/src/: async_runtime.rs  async_util.rs  error.rs  lib.rs  obs.rs
crates/alopex-core/src/columnar/: async_columnar.rs  encoding.rs  encoding_v2.rs  error.rs  kvs_bridge.rs  memory.rs  mod.rs  segment.rs  segment_v2.rs  statistics.rs
crates/alopex-core/src/compaction/: leveled.rs  merge_iter.rs
crates/alopex-core/src/kv/: any.rs  async_adapter.rs  async_kv.rs  hooks.rs  memory.rs  mod.rs  s3.rs  storage.rs
crates/alopex-core/src/log/: wal.rs
crates/alopex-core/src/lsm/: buffer_pool.rs  checkpoint.rs  free_space.rs  integration.rs  memtable.rs  metrics.rs  mod.rs  sstable.rs  wal.rs
crates/alopex-core/src/storage/: checksum.rs  compression.rs  flush.rs  mod.rs
crates/alopex-core/src/vector/: async_vector.rs  columnar.rs  flat.rs  mod.rs  simd.rs
crates/alopex-core/tests/: acceptance_core.rs  async_kv_test.rs  async_vector_test.rs  e2e_columnar.rs  format_compatibility_test.rs  format_compression_test.rs  format_header_footer_test.rs  format_integration_test.rs  format_recovery_test.rs  format_section_test.rs  format_value_separation_test.rs  format_value_separator_test.rs  format_wasm_large_file_test.rs  memory_vector.rs  recovery_checkpoint.rs  recovery_compat.rs  recovery_crash.rs  recovery_proptest.rs  recovery_wal.rs  storage_sstable_large_value.rs  stress_chaos.rs  stress_common.rs  stress_concurrent.rs  stress_ddl_dml.rs  stress_edge_cases.rs  stress_error_injection.rs  stress_invalid_ops.rs  stress_multi_model.rs  stress_recovery.rs
crates/alopex-core/tests/common/: assertions.rs  fault_injection.rs  fixtures.rs  harness.rs  metrics.rs  mod.rs  tracing_setup.rs  watchdog.rs  workload.rs
crates/alopex-dataframe/: Cargo.toml
crates/alopex-dataframe/src/: error.rs  lib.rs
crates/alopex-dataframe/src/dataframe/: dataframe.rs  mod.rs  series.rs
crates/alopex-dataframe/src/expr/: expr.rs  functions.rs  mod.rs
crates/alopex-dataframe/src/io/: csv.rs  mod.rs  options.rs  parquet.rs
crates/alopex-dataframe/src/lazy/: lazyframe.rs  logical_plan.rs  mod.rs  optimizer.rs
crates/alopex-dataframe/src/physical/: executor.rs  expr_eval.rs  mod.rs  operators.rs  plan.rs
crates/alopex-dataframe/tests/: aggregation.rs  eager_lazy.rs  errors.rs  io_roundtrip.rs  lazy_pushdown.rs  operations.rs  polars_compat.rs
crates/alopex-embedded/: Cargo.toml
crates/alopex-embedded/examples/: embedded-vector.rs  in-memory.rs
crates/alopex-embedded/src/: catalog.rs  catalog_api.rs  columnar_api.rs  lib.rs  options.rs  sql_api.rs  txn_manager.rs
crates/alopex-embedded/tests/: acceptance_embedded.rs  columnar_regression.rs  in_memory.rs  vector_e2e.rs  vector_regression.rs
crates/alopex-py/: Cargo.toml  README.md  build.rs  pyproject.toml
crates/alopex-py/python/alopex/: __init__.py  _alopex.pyi
crates/alopex-py/src/: error.rs  lib.rs  vector.rs
crates/alopex-py/src/catalog/: client.rs  credentials.rs  mod.rs  models.rs  tests.rs  validation.rs
crates/alopex-py/src/embedded/: database.rs  mod.rs  transaction.rs
crates/alopex-py/src/types/: catalog.rs  results.rs
crates/alopex-py/tests/: test_benchmark_nfr13.py  test_catalog.py  test_credentials.py  test_hnsw.py  test_vector.py
crates/alopex-py/tests/benchmarks/: __init__.py  baseline_numpy.py  conftest.py  test_bench_hnsw.py  test_bench_vector.py  test_performance.py
crates/alopex-server/: Cargo.toml  README.md  build.rs
crates/alopex-server/proto/: alopex.proto
crates/alopex-server/src/: audit.rs  auth.rs  config.rs  error.rs  lib.rs  metrics.rs  server.rs  session.rs  tls.rs
crates/alopex-server/src/grpc/: mod.rs
crates/alopex-server/tests/: async_sql_integration.rs  grpc_test.rs  http_sql_e2e.rs  http_test.rs  load_test.rs
crates/alopex-sql/: Cargo.toml
crates/alopex-sql/benches/: aggregate_bench.rs  key_encoding.rs  knn_rowid.rs  storage_bench.rs  storage_macro_bench.rs
crates/alopex-sql/src/: async_api.rs  dialect.rs  integration.rs  lib.rs  tokio_adapter.rs  unified_error.rs
crates/alopex-sql/tests/: aggregate_test.rs  ast_span_test.rs  async_executor_test.rs  async_facade_parity.rs  async_streaming.rs  async_vector_consistency.rs  columnar_scan.rs  columnar_segment.rs  copy_bulk_load.rs  ddl_columnar.rs  ddl_test.rs  dml_test.rs  end_to_end.rs  executor_integration.rs  expr_test.rs  hnsw_sql_tests.rs  knn_optimization.rs  persistence_test.rs  storage_integration.rs  stress_invalid_ops_sql.rs  txn_integration.rs  vector_functions.rs
crates/alopex-tools/: Cargo.toml
(+132 files in other folders)
