[package]
name = "alopex-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for Alopex DB"
keywords = ["database", "cli"]
categories = ["database-implementations", "command-line-utilities"]

[[bin]]
name = "alopex"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Database
alopex-core.workspace = true
alopex-embedded.workspace = true
alopex-sql.workspace = true

# Output
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arrow-array = "52"
arrow-schema = "52"
parquet = { version = "52", features = ["arrow"] }
comfy-table = "7"
csv = "1.3"
dirs = "5.0"
toml = "0.8"

# Signal handling (sync mode)
ctrlc = "3.4"

# Progress
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[features]
default = ["s3"]
s3 = ["alopex-embedded/s3"]

[dev-dependencies]
tempfile = "3.8"
