[package]
name = "alopex-cluster"
version.workspace = true
edition = "2024"  # Uses let chains feature
license.workspace = true
repository.workspace = true
description = "Distributed cluster coordination for Alopex DB"
keywords = ["database", "cluster", "distributed"]
categories = ["database-implementations"]

[dependencies]
