[package]
name = "alopex-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
compression-zstd = ["zstd"]
compression-lz4 = ["lz4"]
checksum-xxh64 = ["xxhash-rust/xxh64"]
wasm-indexeddb = ["js-sys", "web-sys"]
memory-profiling = ["dhat", "crossbeam-skiplist"]
# Enable test-only I/O and crash hooks
test-hooks = []

[dependencies]
bincode = "1.3"
crc32fast = "1.4"
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
snap = "1.1"
tracing = { workspace = true }
zstd = { version = "0.13", optional = true }
lz4 = { version = "1.24", optional = true }
xxhash-rust = { version = "0.8", features = ["xxh64"], optional = true }
jemalloc-ctl = { version = "0.5", optional = true }
dhat = { version = "0.3", optional = true }
crossbeam-skiplist = { version = "0.1", optional = true }
rand = { workspace = true }

[dev-dependencies]
parking_lot = "0.12"
tempfile = "3.8"
tokio = { version = "1.35", default-features = false, features = ["rt", "rt-multi-thread", "macros", "time"] }
criterion = { workspace = true }
rand = { workspace = true }
proptest = "1.4"
tracing-subscriber = { workspace = true, features = ["fmt"] }
crossbeam-skiplist = "0.1"
chrono = { version = "0.4", default-features = true, features = ["clock", "serde"] }
serde_json = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap2 = "0.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[[bench]]
name = "vector_flat"
harness = false

[[bench]]
name = "vector_search"
harness = false

[[bench]]
name = "scan_strategy_bench"
harness = false

[[bench]]
name = "columnar_bench"
harness = false

[[bench]]
name = "hnsw_bench"
harness = false

[[bench]]
name = "lsm_kv_bench"
harness = false

[[bin]]
name = "memory_profile"
path = "src/bin/memory_profile.rs"
required-features = ["memory-profiling"]
