[package]
name = "alopex-dataframe"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Polars-compatible DataFrame API for Alopex DB (v0.1)"
keywords = ["dataframe", "arrow", "polars"]
categories = ["data-structures"]

[dependencies]
arrow = "53"
arrow-csv = "53"
parquet = { version = "53", features = ["arrow"] }
regex = "1"
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
