[package]
name = "alopex-embedded"
version = "0.1.0"
edition = "2021"

[dependencies]
alopex-core = { path = "../alopex-core" }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "memory_vs_disk"
harness = false

[[bench]]
name = "in_memory"
harness = false
