[package]
name = "alopex-embedded"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Embedded database interface for Alopex DB"
keywords = ["database", "embedded"]
categories = ["database-implementations"]

[dependencies]
alopex-core.workspace = true
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "memory_vs_disk"
harness = false

[[bench]]
name = "in_memory"
harness = false
