[package]
name = "alopex-py"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for Alopex DB"
keywords = ["database", "python", "bindings"]
categories = ["database-implementations", "api-bindings"]
build = "build.rs"

[lib]
name = "_alopex"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["abi3-py38", "extension-module"] }
numpy = { version = "0.24", optional = true }
alopex-core.workspace = true
alopex-embedded = { path = "../alopex-embedded" }

[build-dependencies]
pyo3-build-config = "0.24.1"

[dev-dependencies]
criterion = { workspace = true }
proptest = "1"

[features]
default = []
numpy = ["dep:numpy"]

[[bench]]
name = "binding_overhead"
harness = false
