[package]
name = "alopex-sql"
version = "0.1.0"
edition = "2024"
description = "SQL parser components for the Alopex DB dialect"
license = "Apache-2.0"

[dependencies]
thiserror = "2.0"
alopex-core = { path = "../alopex-core" }
parquet = { version = "52", features = ["arrow"] }
arrow-array = "52"
arrow-schema = "52"

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"

[[bench]]
name = "key_encoding"
harness = false

[[bench]]
name = "storage_bench"
harness = false

[[bench]]
name = "storage_macro_bench"
harness = false
