[package]
name = "alopex-sql"
version.workspace = true
edition = "2024"  # Uses let chains feature
license.workspace = true
repository.workspace = true
description = "SQL parser components for the Alopex DB dialect"
keywords = ["database", "sql", "parser"]
categories = ["database-implementations", "parser-implementations"]

[features]
default = []
async = ["alopex-core/async", "dep:futures"]
tokio = ["async", "alopex-core/tokio", "dep:tokio"]

[dependencies]
thiserror = "2.0"
alopex-core.workspace = true
parquet = { version = "52", features = ["arrow"] }
arrow-array = "52"
arrow-schema = "52"
serde = { workspace = true, features = ["derive"] }
bincode = "1.3"
tokio = { workspace = true, optional = true, features = ["rt-multi-thread", "sync"] }
futures = { workspace = true, optional = true }

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"
tempfile = "3.10"
serde_json.workspace = true

[[bench]]
name = "key_encoding"
harness = false

[[bench]]
name = "storage_bench"
harness = false

[[bench]]
name = "storage_macro_bench"
harness = false

[[bench]]
name = "knn_rowid"
harness = false
